--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the ranking controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+    background-color:#d3ffce;
+}
+h1 {
+    text-align:center;
+}
+p {
+    text-align:center;
+}
+.bar {
+    color:grey;
+    text-align:center;
+}
