--- a/app/views/ranking/index.html.erb
+++ b/app/views/ranking/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Ranking#index</h1>
-<p>Find me in app/views/ranking/index.html.erb</p>
+<h1>Ranking Home</h1>
+<div class=bar>
+    <%= @pages.each do |page| %>
+        <a href=<%= page.url %>><%= page.name %></a>
+    <% end %>
+</div>
