--- a/app/views/ranking/index.html.erb
+++ b/app/views/ranking/index.html.erb
@@ -1,6 +1,4 @@
 <h1>Ranking Home</h1>
-<div class=bar>
-    <%= @pages.each do |page| %>
-        <a href=<%= page.url %>><%= page.name %></a>
-    <% end %>
+<div class=navbar>
+    <%= @nav %>
 </div>
