--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,8 @@
 <h1>StaticPages#about</h1>
+<h2>TO BE DONE</h2>
 <p>Find me in app/views/static_pages/about.html.erb</p>
+
+<%= link_to "About", @about %>
+<%= link_to "Login", @login %>
+
+<p>In this file go the details about the methods used. This is a static page, to be filled in later.</p>
