User stuff working great

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,6 @@
 <p>Find me in app/views/users/show.html.erb</p>
 
 <p>I am <%= @user.username %></p>
+
+<%= link_to "About", root_url %>
+<%= link_to "Logout", "/logout" %>
