--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,7 +2,14 @@
 <h2>TO BE DONE</h2>
 <p>Find me in app/views/static_pages/about.html.erb</p>
 
-<%= link_to "About", root_url %>
-<%= link_to "Login", "/login" %>
+<% if self.current_user.nil? %>
+    <%= link_to "About", root_url %>
+    <%= link_to "Login", "/login" %>
+<% else %>
+    <h3>Welcome <%= self.current_user.username %></h3>
+    <%= link_to "About", root_url %>
+    <%= link_to "Home", user_path(self.current_user) %>
+    <%= link_to "Logout", "/logout" %>
+<% end %>
 
 <p>In this file go the details about the methods used. This is a static page, to be filled in later.</p>
