--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -5,6 +5,6 @@
 
 <div>
     <% @followers.each do |user| %>
-        <p><%= user.username %></p>
+        <p><%= user.username %><%= user.rank %></p>
     <% end %>
 </div>
