--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,4 @@
 <%= link_to "About", root_url %>
 <%= link_to "Logout", "/logout" %>
 <%= link_to "Rankings", "/rankings" %>
+<%= link_to "Update Info", "/users/#{@user.id}/edit" %>
