Commit before branch change

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,6 +2,8 @@
 <h2>TO BE DONE</h2>
 <p>Find me in app/views/static_pages/about.html.erb</p>
 
+<%= image_tag="/assets/images/logo.svg" %>
+
 <% if self.current_user.nil? %>
     <%= link_to "About", root_url %>
     <%= link_to "Login", "/login" %>
