--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,15 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 
+<div>
+    <% if flash[:error] -%>
+          <p class='error'><%=h flash[:error] %></p>
+      <% end -%>
+      <% if flash[:success] -%>
+            <p class='notice'><%=h flash[:notice] %></p>
+    <% end -%>
+</div>
+
 <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
 
