--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+    background: #a7d3ff;
+}
+
+h1 {
+    text-align: center;
+}
+
+.bar {
+    background: #1f37d0;
+    text-align: center;
+}
+
+.button {
+    background: #9f37d0;
+    width: 20%;
+}
