--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -18,3 +18,19 @@ h1 {
     background: #9f37d0;
     width: 20%;
 }
+
+.logo {
+    background: #a7d3ff;
+}
+
+.width {
+    text-align: center;
+}
+
+.error {
+    background: red;
+}
+
+.notice {
+    background: red;
+}
