--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<h1>About Twilight</h1>
+<h1>Twilight</h1>
 
 <div class="bar">
     <% if self.current_user.nil? %>
@@ -13,8 +13,6 @@
     <% end %>
 </div>
 
-<p>Find me in app/views/static_pages/about.html.erb (Remove for prod)</p>
-
-<%= image_tag="/assets/images/logo.svg" %>
-
-<p>In this file go the details about the methods used. This is a static page, to be filled in later.</p>
+<div class="width">
+    <%= image_tag("logo.svg", :size=>"800x600", :class=>"logo") %>
+</div>
