--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,6 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
-
-<% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 
-<div>
+<div class="width">
     <% if flash[:error] -%>
           <p class='error'><%=h flash[:error] %></p>
       <% end -%>
@@ -16,27 +12,29 @@
 <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
 
-    <p>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
-    (This should be your Twitter screen name)
-    </p>
+        <p>
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+        (This should be your Twitter screen name)
+        </p>
 
-    <p>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    </p>
+        <p>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+        </p>
 
-    <p>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
+        <p>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+        </p>
 
-    <%= f.label :password_confirmation, "Confirm Password" %>
-    <%= f.password_field :password_confirmation %>
-    </p>
+        <p>
+        <%= f.label :password_confirmation, "Confirm Password" %>
+        <%= f.password_field :password_confirmation %>
+        </p>
 
-    <p>
-    <%= f.submit "Create my account" %>
-    </p>
+        <p>
+        <%= f.submit "Create my account" %>
+        </p>
     <% end %>
 </div>
