--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,14 @@
 <h1>Welcome <%= @user.username %></h1>
 
+<div class="width">
+    <% if flash[:error] -%>
+          <p class='error'><%=h flash[:error] %></p>
+      <% end -%>
+      <% if flash[:notice] -%>
+          <p class='notice'><%=h flash[:notice] %></p>
+    <% end -%>
+</div>
+
 <div class="bar">
     <%= link_to "About", root_url, :class=>"button" %>
     <%= link_to "Logout", "/logout", :class=>"button" %>
