--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.twocolumn {
+    width: 100%;
+    margin: 0 auto;
+    text-align:center;
+}
+
+.profileinfo {
+    float: left;
+    width: 50%;
+}
+
+.profileimg {
+    vertical-align:middle;
+    float: right;
+    width: 50%;
+}
