--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Ranking controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.rankings1 {
+    text-align:center;
+    float: left;
+    width: 50%;
+}
+
+.rankings2 {
+    text-align:center;
+    float: right;
+    width: 50%;
+}
