--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -8,24 +8,30 @@
     <%= link_to "Update Info", "/users/#{@user.id}/edit", :class=>"button" %>
 </div>
 
-<h2><%= @user.username %>'s followers:</h2>
+<div class="twocolumn">
+    <div class="rankings1">
+        <h2><%= @user.username %>'s followers:</h2>
 
-<table class="rankings" border="1">
-    <% @followers.each do |user| %>
-        <tr>
-            <td><%= user.username %></td>
-            <td><%= user.score %></td>
-        </tr>
-    <% end %>
-</table>
+        <table class="rankings" border="1">
+            <% @followers.each do |user| %>
+                <tr>
+                    <td><%= user.username %></td>
+                    <td><%= user.score %></td>
+                </tr>
+            <% end %>
+        </table>
+    </div>
 
-<h2><%= @user.username %>'s friends:</h2>
+    <div class="rankings2">
+        <h2><%= @user.username %>'s friends:</h2>
 
-<table class="rankings" border="1">
-    <% @friends.each do |user| %>
-        <tr>
-            <td><%= user.username %></td>
-            <td><%= user.score %></td>
-        </tr>
-    <% end %>
-</table>
+        <table class="rankings" border="1">
+            <% @friends.each do |user| %>
+                <tr>
+                    <td><%= user.username %></td>
+                    <td><%= user.score %></td>
+                </tr>
+            <% end %>
+        </table>
+    </div>
+</div>
