--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -15,6 +15,10 @@
     <% end %>
 </div>
 
+<div class="info">
+    <p>Twilight is a Twitter ranking site. It ranks users on influence based on certain key factors using publicly available information. In order to see how you rank with your social network, first make an account.</p>
+</div>
+
 <table class="rankings" border="1" align="center">
     <tr>
         <td><strong>User ID</strong></td>
