--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,6 +37,12 @@ h1 {
     border-bottom: 1px solid;
 }
 
+.twocolumn {
+    width: 100%;
+    margin: 0 auto;
+    text-align:center;
+}
+
 .logo {
     background: #a7d3ff;
 }
