--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,37 +12,63 @@
  *= require_tree .
  */
 body {
-    background: #a7d3ff;
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    background-image: url('/assets/blackhash.jpg');
 }
 
 h1 {
     text-align: center;
 }
 
-.bar {
-    background: #1f37d0;
+/*The entire centered box*/
+#container{
+    width: 70%;
+    background-color: #eee;
+    margin: 0 auto;
+    margin-top: 0px;
+    border:1px solid #eee;
+}
+
+/*Unique Page content goes in here*/
+#details{
+    padding: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+#header{
     text-align: center;
-    height:30px;
+    line-height: 1.4em;
+    font-size: 1.4em;
+    background-color: #111;
+    color: #fff;
+    margin: 0px;
+    padding:40px;
+    text-shadow: 0 0 0.4em #00aced, 0 0 0.4em #00aced;
+    letter-spacing:2px;
+}
+
+.bar {
+    background: #00678e;
+    text-align: center;
+    padding: 10px;
 }
 
 .button {
     text-decoration:none;
-    background: #9f37d0;
-    font: bold 18px Arial;
-    color: #000;
+    color: #fff;
     padding: 2px 6px 2px 6px;
-    border-left: 1px solid;
-    border-right: 1px solid;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
+    font-weight: bold;
 }
 .button:hover {
-    background-color:#a7d3ff;
+    color: #001117;
+    cursor: pointer;
+
 }
 
 .buttonsure {
     text-decoration:none;
-    background: #9f37d0;
+    color: #9f37d0;
     font: bold 18px Arial;
     color: #000;
     padding: 2px 6px 2px 6px;
@@ -62,10 +88,78 @@ h1 {
 }
 
 .logo {
-    background: #a7d3ff;
+    background: #eee;
 }
 
 .width {
+    padding-top: 20px;
+    text-align: center;
+    max-width: 100%;
+}
+
+
+.width img{
+    width: 80%;
+}
+
+.forms{
+    margin: 0 auto;
+    background-color: #ccc;
+    width: 50%;
+    padding: 20px;
     text-align: center;
 }
 
+form{
+    font-weight: bold;
+}
+
+input, textarea { 
+    width:12em; 
+    border-radius:2px; 
+    border: solid 1px #ccc; 
+    padding:0.4em; 
+    background-color: #f5f5f5; 
+    box-shadow: inset 0 2px 3px rgba(0,0,0,0.2); 
+}
+textarea { 
+    width:100%;
+    height:10em; 
+}
+
+.grey_text{
+    color:#777;
+}
+
+.rankings
+{
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    width:100%;
+    border-collapse:collapse;
+}
+
+.rankings td
+{
+    font-size:1em;
+    border:1px solid #111;
+    padding:3px 7px 2px 7px;
+}
+
+.rankings th{
+    background: -webkit-gradient(linear, left top, left bottom, from(#00aced), to(#005676));
+    background: -moz-linear-gradient(top, #00aced, #005676);
+    background: -o-linear-gradient(top, #00aced, #005676);
+    background: linear-gradient(top, #00aced, #005676);
+    color: #fff;
+    text-shadow: 0px 0.7px 1px #001117;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #111;
+}
+
+.rankings tr:nth-child(odd) {
+    background-color: #B8CDE3;
+}
+.rankings tr:nth-child(even) {
+    background-color: #eee;
+}
