--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,33 +1,22 @@
-<h1>Twilight</h1>
-
 <% if !self.current_user.nil? %>
-    <h3>Welcome <%= self.current_user.username %></h3>
+    <h1>Welcome <%= self.current_user.username %></h1>
+<% else %>
+    <h1>Welcome</h1>
 <% end %>
-<div class="bar">
-    <% if self.current_user.nil? %>
-        <%= link_to "About", root_url, class:"button" %>
-        <%= link_to "Login", "/login", class:"button" %>
-        <%= link_to "Sign Up", "/signup", class:"button" %>
-    <% else %>
-        <%= link_to "About", root_url, class:"button" %>
-        <%= link_to "Home", user_path(self.current_user), class:"button" %>
-        <%= link_to "Logout", "/logout", class:"button" %>
-    <% end %>
-</div>
 
 <div class="info">
-    <p>Twilight is a Twitter ranking site. It ranks users on influence based on certain key factors using publicly available information. In order to see how you rank with your social network, first make an account.</p>
+    <p>Twilight is a Twitter ranking site. It ranks users on influence based on certain key factors using publicly available information. In order to see how you rank in your social network, first make an account. Once you've registered, you'll see your ranking on the table below compared to other Twilight users.</p>
 </div>
 
 <table class="rankings" border="1" align="center">
     <tr>
-        <td><strong>User ID</strong></td>
-        <td><strong>Username</strong></td>
-        <td><strong>Created At</strong></td>
-        <td><strong>Follower Count</strong></td>
-        <td><strong>Friend Count</strong></td>
-        <td><strong>Favourite Count</strong></td>
-        <td><strong>Score</strong></td>
+        <th><strong>User ID</strong></th>
+        <th><strong>Username</strong></th>
+        <th><strong>Created At</strong></th>
+        <th><strong>Follower Count</strong></th>
+        <th><strong>Friend Count</strong></th>
+        <th><strong>Favourite Count</strong></th>
+        <th><strong>Score</strong></th>
     </tr>
     <% @users.each do |user| %>
         <tr>
@@ -41,7 +30,3 @@
         </tr>
     <% end %>
 </table>
-
-<div class="width">
-    <%= image_tag("logo.svg", :size=>"800x600", :class=>"logo") %>
-</div>
