--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,13 @@
 		<div class="bar">
 		    <%= link_to "Home", root_url, :class=>"button" %>
 		    <% if self.current_user.nil? %>
-		    	<%= link_to "Login", "/login", class:"button" %>
-		    	<%= link_to "Sign Up", "/signup", class:"button" %>
+		    	<%= link_to "Login", login_path, class:"button" %>
+		    	<%= link_to "Sign Up", signup_path, class:"button" %>
 		    <% else %>
-		    	<%= link_to "Rankings", "/rankings", :class=>"button" %>
+		    	<%= link_to "Rankings", rankings_path, :class=>"button" %>
 		    	<%= link_to "Profile", "/users/#{self.current_user.id}", :class=>"button" %>
 		    	<%= link_to "Update Info", "/users/#{self.current_user.id}/edit", :class=>"button" %>
-		    	<%= link_to "Logout", "/logout", :class=>"button" %>
+		    	<%= link_to "Logout", logout_path, :class=>"button" %>
 		    <% end %>
 		</div>
 		<div id="details">
