--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
+<meta charset="utf-8">
+
 <% if !self.current_user.nil? %>
     <h1>Welcome <%= self.current_user.username %></h1>
 <% else %>
@@ -8,13 +10,14 @@
     <p>Twilight is a Twitter ranking site. It ranks users on influence based on certain key factors using publicly available information. In order to see how you rank in your social network, first make an account. Once you've registered, you'll see your ranking on the table below compared to other Twilight users.</p>
 </div>
 
-<%= javascript_include_tag 'd3' %>
-<%= javascript_include_tag 'd3.geom' %>
-<%= javascript_include_tag 'd3.layout' %>
+<div id="network">
+<%= javascript_include_tag 'd3.min', :charset=>"utf-8" %>
+<%= javascript_include_tag 'd3.geom', :charset=>"utf-8" %>
+<%= javascript_include_tag 'd3.layout', :charset=>"utf-8" %>
 
 <%= javascript_tag do %>
-    var w = 1280,
-        h = 800,
+    var w = 600,
+        h = 600,
         node,
         link,
         root;
@@ -25,7 +28,7 @@
         .linkDistance(function(d) { return d.target._children ? 80 : 30; })
         .size([w, h - 160]);
 
-    var vis = d3.select("body").append("svg:svg")
+    var vis = d3.select("#network").append("svg:svg")
         .attr("width", w)
         .attr("height", h);
 
@@ -126,6 +129,8 @@
         return nodes;
     }
 <% end %>
+</div>
+
 
 <table class="rankings" border="1" align="center">
     <tr>
