--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -86,21 +86,26 @@
                 })
                 .style("fill", color)
                 .on("click", click)
-                .call(force.drag)
-        ;
-        node.enter()
+                .call(force.drag);
+
+        // Exit any old nodes.
+        node.exit().remove();
+
+        // Labels
+        label = vis.selectAll("label.node")
+                    .data(nodes, function(d) { return d.name ; });
+
+        label.enter()
             .append("svg:text")
-                .attr("class", "label")
+                .attr("class", "node")
                 .attr("x", function(d) { return d.x; })
                 .attr("y", function(d) { return d.y; })
                 .attr("fill", "black")
                 .attr("font-family", "sans-serif")
                 .attr("font-size", "10px")
-                .text(name)
-        ;
+                .text(name);
 
-        // Exit any old nodes.
-        node.exit().remove();
+        label.exit().remove();
     }
 
     function tick() {
@@ -111,6 +116,8 @@
 
         node.attr("cx", function(d) { return d.x; })
                 .attr("cy", function(d) { return d.y; });
+        label.attr("x", function(d) { return d.x; })
+                .attr("y", function(d) { return d.y; })
     }
 
     // Color leaf nodes blue, and packages white or blue.
