--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -17,7 +17,7 @@
 
 <%= javascript_tag do %>
     var w = 600,
-        h = 500,
+        h = 400,
         node,
         link,
         root;
@@ -32,7 +32,7 @@
         .attr("width", w)
         .attr("height", h);
 
-    d3.json("<%= asset_path "network.json" %>", function(json) {
+    d3.json("/network.json", function(json) {
         root = json;
         root.fixed = true;
         root.x = w / 2;
