--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -89,22 +89,19 @@
                 .on("click", click)
                 .call(force.drag);
 
-        // Exit any old nodes.
+        // Exit any old things.
         node.exit().remove();
 
         // Labels
-        label = vis.selectAll("label.node")
-                    .data(nodes, function(d) { return d.name ; });
-
-        label.enter()
-            .append("svg:text")
-                .attr("class", "node")
-                .attr("x", function(d) { return d.x; })
-                .attr("y", function(d) { return d.y; })
-                .attr("fill", "black")
-                .attr("font-family", "sans-serif")
-                .attr("font-size", "10px")
-                .text(name);
+        label = vis.selectAll("circle.label")
+                    .data(nodes, function(d) { return d.name ; })
+                    .enter()
+                    .append("svg:text")
+                        .attr("class", "label")
+                        .attr("fill", "black")
+                        .attr("font-family", "sans-serif")
+                        .attr("font-size", "10px")
+                        .text(name);
 
         label.exit().remove();
     }
