--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -16,6 +16,7 @@
 <%= javascript_include_tag 'd3.layout', :charset=>"utf-8" %>
 
 <%= javascript_tag do %>
+    // Inspiration and ideas from http://mbostock.github.io/d3/talk/20111116/force-collapsible.html
     var w = 600,
         h = 500,
         node,
