Working again, now for testing

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -13,7 +13,7 @@
  */
 body {
     font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-    background-image: url('/twilight<%= image_tag "blackhash.jpg" %>');
+    background-image: url('/twilight<%= asset_path("blackhash.jpg") %>');
 }
 
 h1 {
