--- a/app/views/static_pages/math.html.erb
+++ b/app/views/static_pages/math.html.erb
@@ -8,4 +8,4 @@
 
 <h2>Authors</h2>
 
-<p>If you have any questions about methods used, are unable to access attached files, or wish to discuss the report more with the authers, please email <%= mail_to('willzfarmer@gmail.com') %>.</p>
+<p>If you have any questions about methods used, are unable to access attached files, or wish to discuss the report more with the authors, please email <%= mail_to('willzfarmer@gmail.com') %>.</p>
